--- a/views/solicitud_publicar.html
+++ b/views/solicitud_publicar.html
@@ -1,1 +1,187 @@
-en vivo
+<div ng-controller="tablaManifiestoDefaultController">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Solicitudes</a></li>
+        <li class="active">Publicar Solicitud</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Publicar Solicitud <small>Gestión de Solicitudes</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Numero de Solicitud</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                            <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Destino</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-6">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Cargando</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Publicar Solicitudes </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Solicitud</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+                            <th>Publicar</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14222</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>12/12/16 14:59:02-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14222</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41 TALCA</td>
+                            <td>12/12/16 15:01:14-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14223</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>14 ANTOFAGASTA</td>
+                            <td>12/12/16 15:11:46-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14223</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>15 CALAMA</td>
+                            <td>12/12/16 15:14:59-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14224</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>05 PARQUE ARAUCO</td>
+                            <td>05/01/17 10:14:59-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14225</a></td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>12 MALL PLAZA NORTE</td>
+                            <td>05/01/17 09:04:59-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <p>
+                            <button class="btn btn-success " >Publicar Solicitud</button>
+                            <button class="btn btn-info " >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
