--- a/views/despacho_validar.html
+++ b/views/despacho_validar.html
@@ -23,7 +23,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                    <h4 class="panel-title">Formulario de Ingreso </h4>
                 </div>
 
                 <div class="panel-body">
@@ -76,8 +76,90 @@
                             La Vereficacion de Documentos fue Exitosa
                         </strong>
                         , Vehiculo Habilitado para Despacho
-
                     </div>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">RUN Conductor</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="18569963" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Asignar</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="panel-body">
+                        <table id="data-table1" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Patente</th>
+                                <th>Proveedor</th>
+                                <th>Rev/Tec</th>
+                                <th>Per/Cir</th>
+                                <th>Cer/Gses</th>
+                                <th>Peso Despacho</th>
+                                <th>Volumen</th>
+                                <th>Estado</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="odd gradeX">
+                                <td>HVCV-80</td>
+                                <td>TRANSPORTES DEL PACIFICO</td>
+                                <td>19-SEP-17</td>
+                                <td>19-SEP-17</td>
+                                <td>31-MAR-17</td>
+                                <td>1520</td>
+                                <td>20</td>
+                                <td>ESPERANDO SALIDA</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="alert alert-success fade in m-b-5">
+                            <strong>
+                                La Vereficacion de Documentos fue Exitosa
+                            </strong>
+                            , Vehiculo Habilitado para Despacho
+
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <table id="data-table2" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Rut</th>
+                                <th>Nombre</th>
+                                <th>Sexo</th>
+                                <th>Fecha Nacimiento</th>
+                                <th>Proveedor</th>
+                                <th>Telefono</th>
+                                <th>Licencia</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="odd gradeX">
+                                <td>14558557</td>
+                                <td>Juan Carlos Matamala Duran</td>
+                                <td>Masculino</td>
+                                <td>22/05/1941</td>
+                                <td>TRASPORTES DEL PACIFICO</td>
+                                <td>+56 2 1125 2251</td>
+                                <td>A5</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="alert alert-success fade in m-b-5">
+                            <strong>
+                                La Vereficacion de Documentos fue Exitosa
+                            </strong>
+                            , Conductor Habilitado para Despacho
+
+                        </div>
 
                     <div class="col-md-1">
                         <p>
@@ -86,8 +168,7 @@
                     </div>
                     <div class="col-md-5">
                         <p>
-                            <button class="btn btn-success " >Cerrar Manifiesto</button>
-                            <button class="btn btn-danger " >Anular Manifiesto</button>
+                            <button class="btn btn-success " >Validar Despacho</button>
                             <button class="btn btn-info " >Cancelar</button>
                         </p>
                     </div>
