--- a/views/control_ingreso.html
+++ b/views/control_ingreso.html
@@ -43,6 +43,40 @@
                         </div>
                     </form>
                 </div>
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Proveedor</th>
+                            <th>Rev/Tec</th>
+                            <th>Per/Cir</th>
+                            <th>Cer/Gses</th>
+                            <th>Peso Despacho</th>
+                            <th>Volumen</th>
+                            <th>Estado</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>HVCV-80</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>19-SEP-17</td>
+                            <td>19-SEP-17</td>
+                            <td>31-MAR-17</td>
+                            <td>1520</td>
+                            <td>20</td>
+                            <td>ESPERANDO SALIDA</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="alert alert-success fade in m-b-5">
+                        <strong>
+                            La Vereficacion de Documentos fue Exitosa
+                        </strong>
+                        , Vehiculo Habilitado para Despacho
+                    </div>
+                </div>
             </div>
             <!-- end panel -->
         </div>
