--- a/views/despacho_validar.html
+++ b/views/despacho_validar.html
@@ -67,7 +67,7 @@
                             <td>31-MAR-17</td>
                             <td>1520</td>
                             <td>20</td>
-                            <td>ESPERANDO SALIDA</td>
+                            <td>ESTIBADO</td>
                         </tr>
                         </tbody>
                     </table>
