--- a/views/control_salida.html
+++ b/views/control_salida.html
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hecer Ingreso</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Salida</button>
                             </div>
                         </div>
                     </form>
