--- a/views/sello_crear.html
+++ b/views/sello_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="MonedaTipoCrearController">
+<div ng-controller="">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
